/*
 * Copyright 2024 Gabriel Derrien
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.gabrieldrn.carbon.dropdown.base

internal object DropdownTestTags {
    const val FIELD: String = "carbon_dropdown_field"
    const val FIELD_MULTISELECT_TAG: String = "carbon_dropdown_field_multiselect_tag"
    const val FIELD_CHEVRON: String = "carbon_dropdown_field_chevron"
    const val FIELD_ERROR_ICON: String = "carbon_dropdown_field_error_icon"
    const val FIELD_PLACEHOLDER: String = "carbon_dropdown_field_placeholder"
    const val FIELD_WARNING_ICON: String = "carbon_dropdown_field_warning_icon"
    const val HELPER_TEXT: String = "carbon_dropdown_field_helper_text"
    const val LABEL_TEXT: String = "carbon_dropdown_field_label_text"
    const val MENU_OPTION: String = "carbon_dropdown_menu_option"
    const val MENU_OPTION_CHECKMARK: String = "carbon_dropdown_menu_option_checkmark"
    const val MENU_OPTION_CHECKBOX: String = "carbon_dropdown_menu_option_checkbox"
    const val MENU_OPTION_DIVIDER: String = "carbon_dropdown_menu_option_divider"
    const val POPUP_CONTENT: String = "carbon_dropdown_popup_content"
}
