...
        Dropdown(
            expanded = expanded,
            onExpandedChange = { expanded = it },
            onDismissRequest = { expanded = false },
            placeholder = state::class.java.simpleName,
            selectedOption = null,
            options = mapOf(0 to DropdownOption("Option 0")),
            onOptionSelected = {},
            state = state,
            modifier = Modifier
                .padding(8.dp)
                .fillMaxWidth(),
        )
...
